manifests/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: website-deployment
  labels:
    app: davtro-website
spec:
  replicas: 2
  selector:
    matchLabels:
      app: davtro-website
  template:
    metadata:
      labels:
        app: davtro-website
      annotations: # Przykład adnotacji dla Vault Agent Injector
        vault.hashicorp.com/agent-inject: "true"
        vault.hashicorp.com/role: "website-k8s-role"
    spec:
      serviceAccountName: website-sa
      containers:
        - name: website
          image: ghcr.io/exea-centrum/website-argocd-k8s-githubactions-kustomize-kyverno02:v1.0.0-placeholder # TAG do zastąpienia przez Kustomize/ArgoCD
          ports:
            - containerPort: 80
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
