manifests/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: website-service
  labels:
    app: davtro-website
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: davtro-website
